cabal-version:          2.4
name:                   reacthome-rbus
version:                0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:                 Evgeny Gazdovsky
maintainer:             gazdovsky@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:     CHANGELOG.md

executable reacthome-rbus
    main-is:            Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:      Rbus
                      , Socket

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: OverloadedStrings
                      , NumericUnderscores
                      , LambdaCase

    build-depends:      base        ^>= 4.16.4.0
                      , async
                      , bytestring  
                      , network     
                      , unix        ^>= 2.8.0.0

    hs-source-dirs:     app, src

    default-language:   Haskell2010
